Вывод списка новостей

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
     </div>
     <h2>Фото</h2>
     <div class="pic">
-      <img src="../apple.png" width="450">  
+      <img src="/img/apple.png" width="450">  
     </div>
     <table>
         <thead>
