--- a/html/news.html
+++ b/html/news.html
@@ -24,5 +24,9 @@
                 </li>
             </ul>
         </nav>
+        <div id="news">
+
+        </div>
+        <script src="/js/main.js"></script>
 </body>
 </html>
